--- a/src/Components/Country/style.module.scss
+++ b/src/Components/Country/style.module.scss
@@ -1,5 +1,6 @@
 .container {
-    margin: 1em auto 4em auto;
+    margin: 1em auto 0 auto;
+    padding-bottom: 4em;
     width: 95%;
     display: flex;
     justify-content: space-around;
