--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #ededed;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #ededed;
+    min-height: 100vh;
 }
 
-body > #root > .darkMode{
-  background-color: #212c35;
+.app {
+    min-height: 100vh;
+    height: 100%;
+    width: 100%;
 }
